Mon Sep  2 15:25:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am src/dblib/unittests/Makefile.am:
	- fixed distcheck copying needed file if they not exists in 
	  destination directory

Sun Sep  1 19:56:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* .cvsignore:
	- ignore generated file ltcf-c.sh
	* configure.in:
	- Print out result of threadsafety checks

Sun Sep  1 11:53:01 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- fixed small problem for previous implicit conversion
	* src/tds/convert.c:
	- added conversion from and to binary/image

Sun Sep  1 09:10:31 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c src/dblib/unittests/t0019.c:
	- return and trimming compatible with sybase (test added)
	- allow destlen < 0 for binary (copy all buffer and not padding) 
	* src/tds/convert.c src/tds/unittests/t0007.c:
	- add conversion to numeric (any -> char -> numeric for now)
	- fixed conversion from bit to money
	- moved rtrim before to allocate less memory (in char -> binary)
	- fixed conversion from char to binary if odd length string (added test)

Sat Aug 31 16:27:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/freebcp.c:
	- use dbfcmd() instead of dbcmd() to eliminate potential buffer
	  overrun. 

Sat Aug 31 08:31:25 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- fixed dbwritetext
	* src/dblib/unittests/Makefile.am src/dblib/unittests/t0013.c:
	* src/dblib/unittests/t0014.c:
	- enabled test 13 and 14 adding binary file and using default
	  parameters if none

Fri Aug 30 17:09:22 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h:
	- Add prototypes for new functions dbsetlname(), dbsetlbool(),
	  dbsetlshort(), and dbsetllong().  Use these to implement macros
	  for DBSETL*() and BCP_SETL*().
	* src/dblib/bcp.c:
	- remove BCP_SETL(), it is now a macro in src/sybdb.h.
	* src/dblib/dblib.c: